--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -52,9 +51,37 @@
 
 @layer base {
   * {
-      @apply border-border;
+    @apply border-border;
   }
   body {
-      @apply bg-background text-foreground;
+    @apply bg-background text-foreground;
   }
+}
+
+.head-text {
+  @apply text-4xl p-4 capitalize font-bold text-center tracking-tighter sm:text-5xl md:text-6xl leading-6 bg-gradient-to-br from-[#3f37c9] to-[#4895ef] bg-clip-text text-transparent;
+}
+#hero:before {
+  position: absolute;
+  content: "";
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  max-width: 640px;
+  background-image: radial-gradient(
+      at 27% 37%,
+      hsla(215, 98%, 61%, 1) 0px,
+      transparent 0%
+    ),
+    radial-gradient(at 97% 21%, hsla(210, 98%, 72%, 1) 0px, transparent 80%),
+    radial-gradient(at 52% 99%, hsla(220, 98%, 61%, 1) 0px, transparent 90%),
+    radial-gradient(at 10% 29%, hsla(230, 96%, 67%, 1) 0px, transparent 90%),
+    radial-gradient(at 97% 96%, hsla(240, 60%, 74%, 1) 0px, transparent 90%),
+    radial-gradient(at 33% 50%, hsla(250, 67%, 73%, 1) 0px, transparent 90%),
+    radial-gradient(at 79% 53%, hsla(260, 68%, 79%, 1) 0px, transparent 50%);
+
+  filter: blur(100px) saturate(150%);
+
+  opacity: 0.15;
 }
